syntax = "proto3";

package roea;

// RoeaAgent service provides process monitoring and telemetry
service RoeaAgent {
  // Stream process events in real-time
  rpc WatchProcesses(WatchRequest) returns (stream ProcessEvent);

  // Query historical process data
  rpc QueryProcesses(QueryRequest) returns (QueryResponse);

  // Query network connections
  rpc QueryConnections(QueryRequest) returns (ConnectionsResponse);

  // Query file operations
  rpc QueryFileOps(QueryRequest) returns (FileOpsResponse);

  // Get agent signatures
  rpc GetAgentSignatures(Empty) returns (SignaturesResponse);

  // Get daemon status
  rpc GetStatus(Empty) returns (StatusResponse);
}

message Empty {}

message WatchRequest {
  // Optional filter by agent type
  repeated string agent_types = 1;
  // Include existing processes in initial stream
  bool include_existing = 2;
}

message QueryRequest {
  // Time range start (Unix timestamp ms)
  int64 start_time = 1;
  // Time range end (Unix timestamp ms)
  int64 end_time = 2;
  // Filter by agent type
  repeated string agent_types = 3;
  // Filter by process name pattern
  string process_name_pattern = 4;
  // Maximum results
  int32 limit = 5;
  // Offset for pagination
  int32 offset = 6;
}

message ProcessEvent {
  enum EventType {
    SPAWN = 0;
    EXIT = 1;
    UPDATE = 2;
  }
  EventType event_type = 1;
  Process process = 2;
  int64 timestamp = 3;
}

message Process {
  string id = 1;
  int32 pid = 2;
  int32 ppid = 3;
  string name = 4;
  string cmdline = 5;
  string exe_path = 6;
  string agent_type = 7;
  int64 start_time = 8;
  int64 end_time = 9;
  string user = 10;
  string cwd = 11;
  repeated Connection connections = 12;
  repeated FileOp recent_file_ops = 13;
}

message Connection {
  string id = 1;
  string process_id = 2;
  int32 pid = 3;
  string protocol = 4;
  string local_addr = 5;
  int32 local_port = 6;
  string remote_addr = 7;
  int32 remote_port = 8;
  string state = 9;
  int64 timestamp = 10;
}

message FileOp {
  string id = 1;
  string process_id = 2;
  int32 pid = 3;
  string operation = 4;
  string path = 5;
  string new_path = 6;
  int64 timestamp = 7;
}

message QueryResponse {
  repeated Process processes = 1;
  int32 total_count = 2;
  bool has_more = 3;
}

message ConnectionsResponse {
  repeated Connection connections = 1;
  int32 total_count = 2;
  bool has_more = 3;
}

message FileOpsResponse {
  repeated FileOp file_ops = 1;
  int32 total_count = 2;
  bool has_more = 3;
}

message AgentSignature {
  string name = 1;
  string display_name = 2;
  string icon = 3;
  repeated string expected_endpoints = 4;
  bool child_process_tracking = 5;
}

message SignaturesResponse {
  repeated AgentSignature signatures = 1;
}

message StatusResponse {
  bool running = 1;
  string platform = 2;
  bool elevated_privileges = 3;
  int64 uptime_seconds = 4;
  int64 processes_tracked = 5;
  int64 events_collected = 6;
}
